--- a/src/com/codebind/IntegrateGUI.form
+++ b/src/com/codebind/IntegrateGUI.form
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.codebind.IntegrateGUI">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="12" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="12" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="34" y="20" width="607" height="464"/>
     </constraints>
-    <properties/>
-    <border type="none"/>
+    <properties>
+      <background color="-13959118"/>
+    </properties>
+    <border type="none">
+      <title-color color="-4473925"/>
+    </border>
     <children>
       <component id="13798" class="javax.swing.JTextField" binding="leftBoundInput">
         <constraints>
@@ -15,37 +19,42 @@
           </grid>
         </constraints>
         <properties>
+          <background color="-14587282"/>
           <text value=""/>
           <toolTipText value="Enter the Left Bound"/>
         </properties>
       </component>
       <component id="9d408" class="javax.swing.JTextField" binding="rightBoundInput">
         <constraints>
-          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="3" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties>
+          <background color="-14587282"/>
           <text value=""/>
           <toolTipText value="Enter the Right Bound"/>
         </properties>
       </component>
       <component id="26deb" class="javax.swing.JTextField" binding="equationInput">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties>
+          <background color="-12554684"/>
           <text value=""/>
           <toolTipText value="Enter the Equation"/>
         </properties>
       </component>
       <component id="c7e15" class="javax.swing.JButton" binding="calculateButton">
         <constraints>
-          <grid row="5" column="0" row-span="7" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="0" row-span="7" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-3423189"/>
+          <foreground color="-3156800"/>
           <text value="Calculate"/>
         </properties>
       </component>
@@ -54,6 +63,8 @@
           <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-14587282"/>
+          <enabled value="false"/>
           <font name="JetBrains Mono ExtraBold"/>
           <labelFor value="26deb"/>
           <text value="Input Equation"/>
@@ -64,6 +75,8 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-14587282"/>
+          <enabled value="false"/>
           <font name="JetBrains Mono ExtraBold"/>
           <labelFor value="13798"/>
           <text value="Left Bound"/>
@@ -71,21 +84,34 @@
       </component>
       <component id="67a49" class="javax.swing.JLabel" binding="labelRightBound">
         <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-14587282"/>
           <font name="JetBrains Mono ExtraBold"/>
           <labelFor value="9d408"/>
           <text value="Right Bound"/>
         </properties>
       </component>
-      <component id="f7d85" class="javax.swing.JLabel" binding="labelOutput">
+      <component id="f7d85" class="javax.swing.JLabel" binding="labelOutput" custom-create="true">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="JetBrains Mono"/>
           <text value=""/>
+        </properties>
+      </component>
+      <component id="64454" class="javax.swing.JButton" binding="restartButton" default-binding="true">
+        <constraints>
+          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-7200993"/>
+          <foreground color="-4473925"/>
+          <text value="Restart"/>
+          <verticalAlignment value="0"/>
+          <verticalTextPosition value="0"/>
         </properties>
       </component>
     </children>
