--- a/src/com/codebind/IntegrateGUI.form
+++ b/src/com/codebind/IntegrateGUI.form
@@ -20,6 +20,7 @@
         </constraints>
         <properties>
           <background color="-14587282"/>
+          <foreground color="-10957098"/>
           <text value=""/>
           <toolTipText value="Enter the Left Bound"/>
         </properties>
@@ -32,6 +33,7 @@
         </constraints>
         <properties>
           <background color="-14587282"/>
+          <foreground color="-10957098"/>
           <text value=""/>
           <toolTipText value="Enter the Right Bound"/>
         </properties>
@@ -44,6 +46,7 @@
         </constraints>
         <properties>
           <background color="-12554684"/>
+          <foreground color="-10957098"/>
           <text value=""/>
           <toolTipText value="Enter the Equation"/>
         </properties>
@@ -84,7 +87,9 @@
       </component>
       <component id="67a49" class="javax.swing.JLabel" binding="labelRightBound">
         <constraints>
-          <grid row="2" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <maximum-size width="7" height="7"/>
+          </grid>
         </constraints>
         <properties>
           <background color="-14587282"/>
@@ -93,7 +98,7 @@
           <text value="Right Bound"/>
         </properties>
       </component>
-      <component id="f7d85" class="javax.swing.JLabel" binding="labelOutput" custom-create="true">
+      <component id="f7d85" class="javax.swing.JLabel" binding="labelOutput">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
