--- a/src/com/codebind/IntegrateGUI.form
+++ b/src/com/codebind/IntegrateGUI.form
@@ -133,6 +133,11 @@
           <text value="Value: "/>
         </properties>
       </component>
+      <hspacer id="6b66d">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
     </children>
   </grid>
 </form>
