fixed resizing issue

--- a/src/com/codebind/IntegrateGUI.form
+++ b/src/com/codebind/IntegrateGUI.form
@@ -89,7 +89,7 @@
         </constraints>
         <properties>
           <background color="-7200993"/>
-          <font name="JetBrains Mono ExtraBold" size="26" style="1"/>
+          <font name="JetBrains Mono ExtraBold" size="36" style="1"/>
           <foreground color="-4473925"/>
           <text value="Restart"/>
           <verticalAlignment value="0"/>
@@ -125,19 +125,14 @@
       </component>
       <component id="fe677" class="javax.swing.JLabel" binding="labelOutput">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font name="JetBrains Mono ExtraBold" size="24"/>
+          <font name="JetBrains Mono Thin" size="24" style="0"/>
           <foreground color="-220399"/>
           <text value="Value: "/>
         </properties>
       </component>
-      <hspacer id="6b66d">
-        <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
     </children>
   </grid>
 </form>
